feat(02-08): invoke the hooks at the operation boundaries on both backends
SILENT-02, Task 2 (GREEN). Wires onCreate/onUpdate/onDelete/onLoad into every
write and read path on AbstractRelationalDataOperator and SimpleJsonDataOperator,
including the batch paths (insertAll/updateAll build their own statements
rather than delegating to insert()/update(), so a hook added only to the
single-entity methods would have silently skipped them).

Relational (AbstractRelationalDataOperator):
  - insert(T): onCreate() fires before fields are read for the SQL params, so
    whatever it writes (e.g. createdAt/createdBy) is what gets persisted.
  - update(T): onUpdate() fires before fields are read, same reasoning.
  - insertAll/updateAll: fire once per entity, in list order, inside the same
    loop that already runs per-entity (insertAll's id-assignment loop;
    updateAll's per-entity pstmt-building loop) -- not a second pass.
  - getListHandler() (backs getAll/getLike/page) now fires onLoad() once per
    materialized row. getById and delById do NOT go through it: split off a
    private getRawListHandler()/fetchRawById() that materializes without
    firing onLoad, so getById can fire onLoad exactly once itself and delById
    can fire onDelete instead (deleting is not loading).
  - delById fetches the entity first (via fetchRawById) and fires onDelete()
    on it before the DELETE executes; del(WhereCondition...) deletes by
    predicate without materializing rows and deliberately does NOT fire
    onDelete -- documented on both methods, so neither claims behavior the
    other has that it does not.

JSON (SimpleJsonDataOperator):
  - insert(T): onCreate() fires before caching -- obj is the same instance
    that ends up cached, not a copy.
  - update(T): onUpdate() fires on `old` (the instance that actually gets
    cached) after BeanCopyUtil.copyProperties, so it works whether the caller
    passed the same cached reference (the common get-mutate-update pattern)
    or a fr