@@ -5,6 +5,7 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
@@ -23,6 +24,11 @@ import org.apache.commons.dbutils.ResultSetHandler;
 import org.apache.commons.dbutils.handlers.ScalarHandler;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonNull;
+import com.google.gson.JsonPrimitive;
+import com.google.gson.JsonSerializer;
 import com.ultikits.ultitools.abstracts.data.BaseDataEntity;
 import com.ultikits.ultitools.annotations.Column;
 import com.ultikits.ultitools.annotations.Table;
@@ -49,7 +55,23 @@ import com.ultikits.ultitools.utils.ReflectionUtil;
 public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<String>> implements DataOperator<T> {
 
     private static final Logger LOGGER = Logger.getLogger(AbstractRelationalDataOperator.class.getName());
-    private static final Gson GSON = new Gson();
+    /**
+     * Default Gson has no bundled adapter for {@code java.time.LocalDateTime}: its reflective
+     * fallback tries to reach {@code LocalDateTime}'s private fields, which JDK 9+'s module
+     * system refuses without {@code --add-opens java.base/java.time}, throwing
+     * {@code JsonIOException} at the first non-null {@code @Column}-mapped {@code LocalDateTime}
+     * value (02-08 -- {@code AuditableDataEntity#createdAt}/{@code updatedAt} were always
+     * {@code null} before this plan, so the per-field {@link #insert} / {@link #update} JSON
+     * fallback below never reached this type until the lifecycle hooks started populating it).
+     * Serializes to/from {@link LocalDateTime#toString()}'s ISO-8601 form, which
+     * {@link LocalDateTime#parse(CharSequence)} reads back exactly.
+     */
+    private static final Gson GSON = new GsonBuilder()
+            .registerTypeAdapter(LocalDateTime.class, (JsonSerializer<LocalDateTime>) (src, type, context) ->
+                    src == null ? JsonNull.INSTANCE : new JsonPrimitive(src.toString()))
+            .registerTypeAdapter(LocalDateTime.class, (JsonDeserializer<LocalDateTime>) (json, type, context) ->
+                    json.isJsonNull() ? null : LocalDateTime.parse(json.getAsString()))
+            .create();
 
     protected final Class<T> type;
     protected final DataSource dataSource;
@@ -144,7 +166,31 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
         }
     }
 
+    /**
+     * The read handler used by {@link #getAll(WhereCondition...)}, {@link #getLike}, and
+     * {@link #page}: fires {@code onLoad()} once per row it materializes. {@link #getById} and
+     * {@link #delById} deliberately do *not* go through this handler -- see
+     * {@link #getRawListHandler()}.
+     */
     protected ResultSetHandler<List<T>> getListHandler() {
+        ResultSetHandler<List<T>> raw = getRawListHandler();
+        return rs -> {
+            List<T> list = raw.handle(rs);
+            for (T entity : list) {
+                entity.onLoad();
+            }
+            return list;
+        };
+    }
+
+    /**
+     * The same row-materialization logic as {@link #getListHandler()}, without firing
+     * {@code onLoad()}. Used internally by {@link #getById} (which fires {@code onLoad()} itself,
+     * exactly once, on the single entity it returns) and {@link #delById} (which needs the
+     * entity to fire {@code onDelete()} on, but deleting is not loading -- see 02-08-PLAN.md's
+     * delete-hook-path split).
+     */
+    private ResultSetHandler<List<T>> getRawListHandler() {
         // Build mappings from SQL column names to Java field names and boolean detection.
         // Gson matches JSON keys to Java field names, so we must use field names (camelCase)
         // as map keys, not SQL column names (snake_case).
@@ -185,6 +231,22 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
             }
             return list;
         };
+    }
+
+    /**
+     * Fetches a single row by id without firing {@code onLoad()}. Shared by {@link #getById}
+     * (which fires {@code onLoad()} on the result) and {@link #delById} (which fires
+     * {@code onDelete()} instead -- deleting is not loading).
+     */
+    private T fetchRawById(Object id) {
+        String sql = "SELECT * FROM " + tableName + " WHERE id = ?";
+        try {
+            List<T> list = queryRunner.query(sql, getRawListHandler(), id);
+            return list.isEmpty() ? null : list.get(0);
+        } catch (SQLException e) {
+            throw new DataAccessException(ErrorCode.DATA_OPERATION_FAILED,
+                    "Failed to get entity by id: " + id, e);
+        }
     }
 
     /**
@@ -301,14 +363,11 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
 
     @Override
     public T getById(Object id) {
-        String sql = "SELECT * FROM " + tableName + " WHERE id = ?";
-        try {
-            List<T> list = queryRunner.query(sql, getListHandler(), id);
-            return list.isEmpty() ? null : list.get(0);
-        } catch (SQLException e) {
-            throw new DataAccessException(ErrorCode.DATA_OPERATION_FAILED,
-                    "Failed to get entity by id: " + id, e);
+        T entity = fetchRawById(id);
+        if (entity != null) {
+            entity.onLoad();
         }
+        return entity;
     }
 
     @Override
@@ -378,6 +437,9 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
         if (obj.getId() == null) {
             obj.setId(java.util.UUID.randomUUID().toString());
         }
+        // Fires before the fields below are read for the SQL parameters, so whatever onCreate()
+        // writes (e.g. AuditableDataEntity's createdAt/createdBy) is what actually gets persisted.
+        obj.onCreate();
         StringBuilder sql = new StringBuilder("INSERT INTO ").append(tableName).append(" (");
         StringBuilder values = new StringBuilder(") VALUES (");
         List<Object> params = new ArrayList<>();
@@ -419,6 +481,13 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
         }
     }
 
+    /**
+     * Deletes by predicate, without loading matched rows into entities first. Consequently this
+     * overload does <strong>not</strong> fire {@code onDelete()} -- there is no entity to fire it
+     * on without fabricating one, and this class does not fabricate entities to satisfy a hook.
+     * {@link #delById(Object)} fetches the entity first and does fire {@code onDelete()} on it
+     * (02-08-PLAN.md's delete-hook-path split).
+     */
     @Override
     public void del(WhereCondition... whereConditions) {
         // T-02-TAM-1 / SILENT-01 / D-12: refuse before any SQL text is built and before any
@@ -442,8 +511,18 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
         }
     }
 
+    /**
+     * Deletes by id, fetching the entity first so {@code onDelete()} can fire on it -- unlike
+     * {@link #del(WhereCondition...)}, which deletes by predicate without materializing rows and
+     * therefore does not fire the hook. If no row matches {@code id}, nothing is fetched and
+     * {@code onDelete()} does not fire.
+     */
     @Override
     public void delById(Object id) {
+        T entity = fetchRawById(id);
+        if (entity != null) {
+            entity.onDelete();
+        }
         String sql = "DELETE FROM " + tableName + " WHERE id = ?";
         try {
             queryRunner.update(sql, id);
@@ -469,6 +548,11 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
 
     @Override
     public void update(T obj) throws IllegalAccessException {
+        // Fires before the fields below are read for the SQL parameters, so whatever onUpdate()
+        // writes (e.g. AuditableDataEntity's updatedAt/updatedBy) is what actually gets
+        // persisted. onUpdate() does not touch createdAt/createdBy, so an entity carrying its
+        // original creation values in memory persists them unchanged here.
+        obj.onUpdate();
         StringBuilder sql = new StringBuilder("UPDATE ").append(tableName).append(" SET ");
         List<Object> params = new ArrayList<>();
         Field[] fields = ReflectionUtil.getFields(obj.getClass());
@@ -544,11 +628,16 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
             return;
         }
         transaction(() -> {
-            // Auto-generate UUID for entities without id
+            // Auto-generate UUID for entities without id, then fire onCreate() once per entity
+            // in list order -- before the second loop below reads fields for the batch
+            // PreparedStatement, exactly mirroring insert()'s single-entity ordering. This loop
+            // builds its own statement rather than delegating to insert(), so a hook wired only
+            // into insert() would silently skip this path.
             for (T entity : entities) {
                 if (entity.getId() == null) {
                     entity.setId(java.util.UUID.randomUUID().toString());
                 }
+                entity.onCreate();
             }
             List<ColumnMapping> columns = getColumnMappings();
             StringBuilder sql = new StringBuilder("INSERT INTO ").append(tableName).append(" (");
@@ -612,6 +701,11 @@ public abstract class AbstractRelationalDataOperator<T extends BaseDataEntity<St
                 try (Connection conn = dataSource.getConnection();
                      PreparedStatement pstmt = conn.prepareStatement(sql.toString())) {
                     for (T entity : entities) {
+                        // Fires once per entity, in list order, before this entity's fields are
+                        // read below -- this loop builds its own statement rather than
+                        // delegating to update(T), so a hook wired only into update(T) would
+                        // silently skip this path.
+                        entity.onUpdate();
                         int idx = 1;
                         for (ColumnMapping col : columns) {
                             Object value = col.field.get(entity);
